fix(theme-toggle): remove scale transform from css which overwrites inline and causes clipping

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -401,9 +401,8 @@ html {
   font-size: 17px;
   position: relative;
   display: inline-block;
-  width: 64px;
-  height: 34px;
-  transform: scale(0.9);
+  width: 52px;
+  height: 28px;
 }
 
 .theme-toggle input {
